...
};

const state = {
  activeExercise: 0,
  exercises: [
    {
      name: "Knebøy",
      sets: [
        { load: "80", reps: "8", status: "complete" },
        { load: "80", reps: "8", status: "complete" },
        { load: "80", reps: "8", status: "suggested" },
      ],
    },
    {
      name: "Benkpress",
...
